2007-11-30  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/LocalizationBundle_it.properties:
	Fixed errors.

2007-11-29  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/MeterPlot.java
	(writeObject): Handle dialOutlinePaint,
	(readObject): Likewise,
	* tests/org/jfree/chart/plot/junit/MeterPlotTests.java
	(testEquals): Updated to test dialOutlinePaint,
	(testSerialization1): Likewise.

2007-11-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/ComparableObjectSeries.java
    (clear): Changed from protected to public,
    * source/org/jfree/data/xy/VectorSeries.java
    (clear): Removed,
    * tests/org/jfree/data/time/ohlc/junit/OHLCSeriesTests.java
    (testClear): New test method,
    * tests/org/jfree/data/xy/junit/VectorSeriesTests.java
    (testClear): Likewise,
    * tests/org/jfree/data/xy/junit/XIntervalSeriesTests.java
    (testClear): Likewise,
    * tests/org/jfree/data/xy/junit/XYIntervalSeriesTests.java
    (testClear): Likewise,
    * tests/org/jfree/data/xy/junit/YIntervalSeriesTests.java
    (testClear): Likewise.
 
2007-11-27  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CombinedDomainXYPlot.java
	(setFixedRangeAxisSpaceForSubplots): Call new method in XYPlot,
	* source/org/jfree/chart/plot/CombinedRangeXYPlot.java
	(setFixedDomainAxisSpaceForSubplots): Likewise,
	* source/org/jfree/chart/plot/XYPlot.java
	(setFixedDomainAxisSpace(AxisSpace)): Delegate to new method,
	(setFixedDomainAxisSpace(AxisSpace, boolean)): New method,
	(setFixedRangeAxisSpace(AxisSpace)): Delegate to new method,
	(setFixedRangeAxisSpace(AxisSpace, boolean)): New method.

2007-11-27  David Gilbert  <david.gilbert@object-refinery.com>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java:
	(drawImage(BufferedImage, BufferedImageOp, int, int)): Updated for method 
	moved to SWTUtils,
	(drawImage(Image, int, int, ImageObserver)): Implemented,